<resources>
    <string name="app_name">MarketingCentral</string>

    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="restart">REINICIAR</string>
    <string name="update_downloaded">ACTUALIZACIÓN DESCARGADA</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="test">test</string>
    <string name="aqui_version">aquí versión</string>
    <string name="qr">QR</string>
    <string name="buscar">BUSCAR</string>
    <string name="back">◀</string>
    <string name="rut">RUT</string>
    <string name="nombres">NOMBRE(S)</string>
    <string name="apellido_paterno">APELLIDO PATERNO</string>
    <string name="apellido_materno">APELLIDO MATERNO</string>
    <string name="e_mail">CORREO ELECTRÓNICO</string>
    <string name="ofertas_por_whatsapp">¿RECIBIR OFERTAS POR WHATSAPP?</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="agregar">AGREGAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="editar">EDITAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="_569">+569</string>
    <string name="clientes">Clientes</string>
    <string name="productos">Productos</string>
    <string name="informes">Informes</string>
    <string name="ajustes">Ajustes</string>
    <string name="clientesimg">clientesImg</string>
    <string name="productosimg">productosImg</string>
    <string name="informesimg">informesImg</string>
    <string name="ajustesimg">ajustesImg</string>
    <string name="pdf">PDF</string>
    <string name="excel">EXCEL</string>
    <string name="generar">Generar</string>
    <string name="seleccione_la_fecha">Seleccione la fecha</string>
    <string name="seleccione_el_informe">Seleccione el informe</string>
    <string name="seleccione_el_formato">Seleccione el formato</string>

    <string-array name="country_arrays">
        <item>Informe de Ventas</item>
        <item>Informe de Productos</item>
    </string-array>
</resources>