<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario">

    <TableLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:id="@+id/tb_form">

        <TableRow
            android:layout_width="0dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginBottom="15dp">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="100dp"
                android:layout_height="wrap_content"
                android:theme="@style/ColorButton"
                android:id="@+id/btnQR"
                android:text="@string/qr"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnQuery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_form_btn"
                android:enabled="false"
                android:text="@string/buscar"
                android:theme="@style/ColorButton"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBack"
                android:background="@drawable/rounded_form_btn"
                android:theme="@style/ColorButton"
                android:visibility="gone"
                android:text="@string/back" />
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rut"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="48dp"
                android:maxLines="1"
                android:maxLength="10"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:imeOptions="actionSend"
                android:id="@+id/RUT_Cli"
                android:textColorHint="#78909C"
                android:inputType="textUri"
                android:hint="@string/rut" />
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/nombres"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="48dp"
                android:id="@+id/Nom_Cli"
                android:textStyle="bold"
                android:inputType="text"
                android:textColorHint="#78909C"
                android:importantForAutofill="no"
                android:hint="@string/nombres" />
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/apellido_paterno"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Ape_Pat_Cli"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:hint="@string/apellido_paterno"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="#78909C" />
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/apellido_materno"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Ape_Mat_Cli"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:hint="@string/apellido_materno"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="#78909C" />
        </TableRow>

        <TableRow
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#78909C" />
        </TableRow>

        <TableRow
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:gravity="center">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/ofertas_por_whatsapp"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Oferta_Wsp"
                android:inputType="number"
                android:importantForAutofill="no"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:visibility="invisible"
            android:id="@+id/row_wsp"
            android:weightSum="3"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp"
                android:textColor="@color/black" />
            <TableRow
                android:layout_width="0dp"
                android:layout_weight="2">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/_569"
                    android:inputType="numberDecimal"
                    android:id="@+id/lblWsp"
                    android:importantForAutofill="no" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Nro_Wsp"
                    android:inputType="phone"
                    android:maxLength="8"
                    android:textStyle="bold"
                    android:textColorHint="#78909C"
                    android:importantForAutofill="no"
                    android:hint="@string/whatsapp" />

            </TableRow>
        </TableRow>

    </TableLayout>

    <TableRow
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/row1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/tb_form"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="50dp"
            android:id="@+id/btnCreate"
            android:enabled="false"
            android:background="@drawable/rounded_form_btn"
            android:theme="@style/ColorButton"
            android:text="@string/agregar"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/btnClear"
            android:background="@drawable/rounded_form_btn"
            android:theme="@style/ColorButton"
            android:text="@string/cancelar"
            />
    </TableRow>

    <TableRow
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/row2"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/row1"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="50dp"
            android:id="@+id/btnModify"
            android:background="@drawable/rounded_form_btn"
            android:theme="@style/ColorButton"
            android:text="@string/editar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="50dp"
            android:id="@+id/btnUpdate"
            android:visibility="gone"
            android:background="@drawable/rounded_form_btn"
            android:theme="@style/ColorButton"
            android:text="@string/guardar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:background="@drawable/rounded_form_btn"
            android:theme="@style/ColorButton"
            android:id="@+id/btnDelete"
            android:text="@string/eliminar" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>