<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/seleccione_el_informe"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/tipoInforme"
        android:entries="@array/country_arrays"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:background="@drawable/spinner_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/seleccione_la_fecha"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoInforme" />

    <EditText
        android:id="@+id/datePicker"
        android:labelFor="@id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints=""
        android:inputType="date"
        android:clickable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:focusableInTouchMode="false"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccione_el_formato"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border"
        android:padding="1dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/pdfRadioBtn"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_segmented_left"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/pdf"
                android:textColor="@drawable/txt_segmented" />

            <RadioButton
                android:id="@+id/excelRadioBtn"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_segmented_right"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/excel"
                android:textColor="@drawable/txt_segmented" />

        </RadioGroup>

    </FrameLayout>

    <Button
        android:id="@+id/btnArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generar"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
         />






</androidx.constraintlayout.widget.ConstraintLayout>