<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/primerLinear"
            android:layout_marginTop="150dp"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_clientes"
                android:layout_width="0dp"
                app:cardCornerRadius="20dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/clientesImg"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/clientesimg"
                        android:src="@drawable/icon_client" />

                    <TextView
                        android:id="@+id/clietnesLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/clientesImg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica_regular"
                        android:text="@string/clientes"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_productos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/productosImg"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/productosimg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/icon_grocery" />

                    <TextView
                        android:id="@+id/productosLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/productosImg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica_regular"
                        android:text="@string/productos"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/segundoLinear"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primerLinear"
            app:layout_constraintHorizontal_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_informes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/informesImg"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/informesimg"
                        android:src="@drawable/icon_report" />

                    <TextView
                        android:id="@+id/informesLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/informesImg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica_regular"
                        android:text="@string/informes"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_ajustes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ajustesImg"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/ajustesimg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/icon_settings" />

                    <TextView
                        android:id="@+id/ajustesLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ajustesImg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/aclonica_regular"
                        android:text="@string/ajustes"
                        android:textSize="24sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>