<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tablita"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/filita"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.6" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/usuario"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/txtPassword"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:passwordToggleEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/filita"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/tablita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.6">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_login_btn"
            android:backgroundTint="@color/burdeoCentral"
            android:fontFamily="arial"
            android:text="@string/ingresar"
            android:textSize="20sp"
            android:textStyle="normal"
            android:theme="@style/ColorButton" />
    </TableRow>

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/aqui_version"
        android:id="@+id/lblversion"/>

</androidx.constraintlayout.widget.ConstraintLayout>